crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__valid_rust_replace.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: normalize_path(&result)
snapshot_kind: text
---
<file_content path="[TEMP_DIR]/test.rs">
fn main() { let x = 42; let y = x * 2; }
</file_content>
